Bug 157187 - DOCX export: lost tracked column deletion or insertion interoperability
Summary: DOCX export: lost tracked column deletion or insertion interoperability
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-09-11 12:32 UTC by NISZ LibreOffice Team
Modified: 2023-09-19 09:47 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (9.72 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-09-11 12:33 UTC, NISZ LibreOffice Team
Details
Test file (9.72 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-09-13 12:28 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-09-11 12:32:52 UTC
Description:
Accepting a column deletion or rejecting a column insertion does not delete the column. 
Because characters with character code 0x01 are inserted in the cells of the import row.

Steps to Reproduce:
1. Open attached file.
2. Edit -> TC Manage Changes.
3. Accepting a column deletion or rejecting a column.

Actual Results:
Accept column deletion or reject column insertion does not delete the column.

Expected Results:
Accept column deletion or reject column insertion does delete the column.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: be9d7bee88eff89c0d361f23abb447ac2086c3b4
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-09-11 12:33:34 UTC
Created attachment 189487 [details]
Sample file
Comment 2 László Németh 2023-09-13 12:27:40 UTC
DOCX export of tracked table column changes could result dummy content boxes and missing tracked table column changes in MSO, i.e. lost interoperability.

Open attached DOCX file tdf157011_ins_del_empty_cols.docx and save it in DOCX, and open the result in MSO to show the lost tracked column changes.
Comment 3 László Németh 2023-09-13 12:28:04 UTC
Created attachment 189551 [details]
Test file
Comment 4 Commit Notification 2023-09-13 21:37:22 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d23ba9e6103bba27b57c59505641cc64db63ec98

tdf#157187 sw tracked table column: fix DOCX export

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-09-19 09:47:10 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/a4bef51e14c7829b368bda0cf06c87c16a03b1b1

tdf#157187 sw tracked table column: fix DOCX export

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.