tdf#157187 sw tracked table column: fix DOCX export

DOCX export of tracked table column changes
could result dummy content boxes and missing
tracked table column changes in MSO, i.e. lost
interoperability. As a workaround, skip
exporting content boxes within tracked table cells.

Note: bad 0x01 characters and incomplete w:sdt export in table
cells since commit b5c616d10bff3213840d4893d13b4493de71fa56
"tdf#104823: support for sdt plain text fields".

See also commit 4697d2bda1b37f9cf8b301f5bf044c2390f56333
"tdf#157011 sw tracked table column: fix DOCX import of empty cell".

Change-Id: I32f77c7532a9cc6bf5d88a626ac3c62a5c02a34a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156895
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>